--- a/src/styles/Board.scss
+++ b/src/styles/Board.scss
@@ -8,4 +8,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  outline: none;
+}
+.grid-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
