--- a/src/styles/Node.scss
+++ b/src/styles/Node.scss
@@ -1,8 +1,16 @@
 .node {
   width: 30px;
   height: 30px;
-  outline: 0.5px solid rgb(110, 77, 255);
-  display: inline-flex;
+  outline: 2px solid rgb(110, 77, 255);
+  display: inline-block;
+  transition: background-color 0.3s ease-out;
+
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
 .node-finish {
