🔴 End Node Working

--- a/src/styles/Node.scss
+++ b/src/styles/Node.scss
@@ -13,7 +13,7 @@
   user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
-.node-finish {
+.node-end {
   background-color: red;
 }
 
